# CodexBarWin-build

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  windows-build.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: codexpilot-icon.icns
src-tauri/src/: accounts.rs  codex_live.rs  history.rs  lib.rs  main.rs  network_env.rs  official_auth.rs  official_backup.rs  proxy.rs  sessions.rs  store.rs  transform.rs  usage.rs
src-tauri/tests/: core.rs  network_env.rs  official_backup.rs  sessions.rs
