[package]
name = "codex_api_switcher"
version = "0.1.3"
edition = "2024"

[lib]
name = "codex_api_switcher"
path = "src/lib.rs"

[[bin]]
name = "CodexPilot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.7"
base64 = "0.22"
bytes = "1"
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
